# dgit

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
dgit/: Cargo.toml
dgit/src/: error.rs  lib.rs
dgit/src/git/: mod.rs  object.rs  repo.rs  util.rs
