[package]
name = "dgit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
futures = "0.3"
hex = "0.4"
itertools = "0.10"
multihash = "0.15"
snafu = "0.6"
url = "2.2"